# mdns-rewriter

./: .gitignore  Cargo.toml  README.md  build_original.sh  clippy.toml  mdns-repeater.c  package-lock.json  package.json
src/: cli.rs  main.rs  reflector.rs  signal_handlers.rs  sockets.rs  unix.rs
