[package]
name = "mdns-reflector"
# don't change this, it's updated before an actual build by update-version.sh
version = "0.0.0-development"
edition = "2021"
rust-version = "1.82.0"
authors = ["Kristof Mattei"]
description = "mdns-reflector"
license-file = "LICENSE"
categories = ["network"]
keywords = ["mdns", "rewrite", "docker"]
repository = "https://github.com/kristof-mattei/mdns-reflector"

[lints.clippy]
# don't stop from compiling / running
all = "warn"
pedantic = "warn"
cargo = "warn"
# this one causes confusion when combining variables (`foo`) and
# dereferenced variables (`foo.bar`). The latter cannot be inlined
# so we don't inline anything
uninlined-format-args = { level = "allow", priority = 127 }

[lints.rust]
let_underscore_drop = { level = "deny", priority = 127 }
non_ascii_idents = { level = "deny", priority = 127 }

[profile.dev.package.backtrace]
opt-level = 3

[features]
coverage = []
ip_pktinfo = []
so_bindtodevice = []

[dependencies]
clap = { version = "4.5.21", features = ["cargo", "derive", "string"] }
color-eyre = { git = "https://github.com/eyre-rs/eyre", rev = "fc83cb8125bdde3a3b06e8b06c3405f6fc040a8a" }
const_format = "0.2.33"
libc = "0.2.162"
socket2 = { version = "0.5.7" }
tokio = { version = "1.41.1", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "time",
] }
tokio-util = { version = "0.7.12", features = ["rt"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "time",
    "tracing-log",
] }
tracing-error = "0.2.0"

# reqwest = { version = "0.11.5", features = ["json"] }
# serde_json = "1.0.68"
# serde = { version = "1.0.130", features = ["derive"] }
# futures = "0.3.17"
# tokio = { version = "1.12.0", features = ["full"] }
# log = "0.4.14"
# env_logger = "0.9.0"
# serde_yaml = "0.8.21"
# clap = { version = "3.0.14", features = ["derive"] }

# We compile the Docker container with musl to get a static library. Smaller, faster.
# BUT that means that we need to include openssl
# Documentation on the syntax:
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#platform-specific-dependencies
[target.'cfg(all(target_arch = "x86_64", target_os="linux", target_env="musl"))'.dependencies]
# openssl = { version = "0.10.36", features = ["vendored"] }
